--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@
 }
 
 html {
-    color:#555;
+    color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-size: 20px;
     font-weight: 300;
@@ -21,11 +21,11 @@ html {
 /*************************************/
 .row {
     max-width: 1140px;
-    margin:auto;
+    margin: auto;
 }
 
 
-.clearfix:after{
+.clearfix:after {
     content: '.';
     clear: both;
     display: block;
@@ -34,16 +34,18 @@ html {
 }
 
 /**********Heading*****************/
-h1,h2,h3 {
+h1,
+h2,
+h3 {
     font-weight: 300;
     text-transform: uppercase;
 }
 
-h2{
-    text-align: center; 
-    font-size:180%;
+h2 {
+    text-align: center;
+    font-size: 180%;
     margin-bottom: 30px;
-    word-spacing: 3px;   
+    word-spacing: 3px;
 }
 
 h2:after {
@@ -60,7 +62,7 @@ section {
 }
 
 a:link,
-a:visited{
+a:visited {
     text-decoration: none;
     color: #e67e22;
     border-bottom: 1px solid #e67e22;
@@ -70,47 +72,49 @@ a:visited{
 }
 
 a:hover,
-a:active{
-   
-     border-bottom: 1px solid transparent;
-    
+a:active {
+
+    border-bottom: 1px solid transparent;
+
 }
+
 /****************Button*************/
 .btn:link,
 .btn:visited,
-input[type=submit]{
+input[type=submit] {
     padding: 10px 30px;
     border-radius: 20px;
     display: inline-block;
     border: 1px solid #e67e22;
-    -webkit-transition: background-color 0.2s, color 0.2s,border 0.2s;
-    transition: background-color 0.2s, color 0.2s,border 0.2s;
-   
-   
-    
+    -webkit-transition: background-color 0.2s, color 0.2s, border 0.2s;
+    transition: background-color 0.2s, color 0.2s, border 0.2s;
+
+
+
 }
+
 .full-btn:link,
 .full-btn:visited,
-input[type=submit]{
+input[type=submit] {
     background-color: #e67e22;
-    color:#fff;
+    color: #fff;
     margin-right: 20px;
 }
 
 .ghost-btn:link,
-.ghost-btn:visited{
+.ghost-btn:visited {
     color: #e67e22;
-   
+
 }
 
 .btn:hover,
 .btn:active,
 input[type=submit]:hover,
-input[type=submit]:active{
+input[type=submit]:active {
     background-color: #cf6d17;
-    border:1px solid #cf6d17;
-    color:#fff;
-     
+    border: 1px solid #cf6d17;
+    color: #fff;
+
 }
 
 
@@ -118,23 +122,32 @@ input[type=submit]:active{
 /*****************Header**************/
 /*************************************/
 
-nav {
-    padding-top: 20px;
+/*****main nav********/
+.main-nav {
+    margin-top: 55px;
+    float: right;
 }
 
-nav ul {
-    float:right;
-
+.logo {
+    height: 100px;
+    width: auto;
+    margin-top: 20px;
 }
 
-nav li{
+
+.black-logo {
+    display: none;
+}
+
+nav li {
     list-style: none;
     display: inline-block;
-    margin-left: 20px;       
+    margin-left: 20px;
 }
 
 nav li a:link,
-nav li a:visited{
+nav li a:visited {
+    padding: 8px 0;
     color: #fff;
     border-bottom: 2px solid transparent;
     padding-bottom: 10px;
@@ -143,35 +156,68 @@ nav li a:visited{
 }
 
 nav li a:hover,
-nav li a:active{
+nav li a:active {
     border-bottom: 2px solid #e67e22;
 }
 
+/*****js-nav-sticky nav********/
+.js--nav-sticky {
+    color: #000;
+    background: rgba(255, 255, 255, 0.98);
+    width: 100%;
+    position: fixed;
+    box-shadow: 0 2px #d6d6d6;
+    top: 0;
+    left: 0;
+    z-index: 999;
 
+}
 
-header{
-    background-image:  -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("img/hero.jpg");
-    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
+.js--nav-sticky .logo {
+    display: none;
+}
+
+.js--nav-sticky .black-logo {
+    display: inline-block;
+    height: 50px;
+    margin: 5 0;
+    ;
+}
+
+.js--nav-sticky nav {
+    padding-top: 0px;
+}
+
+.js--nav-sticky nav li a:link,
+.js--nav-sticky nav li a:visited {
+    padding: 17px 0;
+    color: #000;
+}
+
+.js--nav-sticky ul {
+    margin-top: 20px;
+
+}
+
+header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("img/hero.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("img/hero.jpg");
     height: 100vh;
     background-position: center;
-    background-size:cover;
-   
+    background-size: cover;
+
 }
 
-.logo {
-    height: 100px;
-    width: auto;
-}
 
-h1{
-font-weight: 300;
-color:#fff;
-font-size: 240%;
-letter-spacing: 1px;
-word-spacing: 4px;
-text-transform: uppercase;
-margin-bottom: 40px;
-    
+h1 {
+    font-weight: 300;
+    color: #fff;
+    font-size: 240%;
+    letter-spacing: 1px;
+    word-spacing: 4px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+
 }
 
 .header-box {
@@ -179,8 +225,8 @@ margin-bottom: 40px;
     width: 1140px;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 
@@ -188,25 +234,26 @@ margin-bottom: 40px;
 /*****************************************/
 /**********Feature section***********/
 /*****************************************/
-.long-copy{
+.long-copy {
     width: 70%;
     margin: auto;
-    line-height: 145%;   
+    line-height: 145%;
     margin-bottom: 30px;
 }
 
 .features-section i {
     font-size: 350%;
-    color:#e67e22;
-   
+    color: #e67e22;
+
 }
+
 h3 {
     margin-bottom: 15px;
     font-size: 110%;
 }
 
-.box p{
-   line-height: 145%;
+.box p {
+    line-height: 145%;
     font-size: 90%;
 }
 
@@ -217,11 +264,13 @@ h3 {
 .meals-section {
     padding: 0;
 }
-.meals-section ul{
-     list-style: none;
-     width: 100%;
+
+.meals-section ul {
+    list-style: none;
+    width: 100%;
 }
-.meals-section li{
+
+.meals-section li {
     display: block;
     height: auto;
     width: 25%;
@@ -230,7 +279,7 @@ h3 {
     overflow: hidden;
 }
 
-.meals-section li img{
+.meals-section li img {
     width: 100%;
     height: auto;
     opacity: 0.7;
@@ -242,7 +291,7 @@ h3 {
     transition: opacity 0.2s, transform 0.2s, -webkit-transform 0.2s;
 }
 
-.meals-section li img:hover{
+.meals-section li img:hover {
     opacity: 1;
     -webkit-transform: scale(1.0);
     transform: scale(1.0);
@@ -252,21 +301,23 @@ h3 {
 /**********step section***********/
 /*****************************************/
 
-.steps-section  {
+.steps-section {
     background-color: #f4f4f4;
 }
+
 .phone-img {
     width: 40%;
     height: auto;
 }
 
 .step-box {
-      margin-top: 30px;
+    margin-top: 30px;
 }
+
 .step-box:first-child {
     padding-right: 3%;
     text-align: right;
-    
+
 }
 
 .step-box:last-child {
@@ -274,10 +325,10 @@ h3 {
     padding-left: 3%;
     text-align: left;
 }
- 
+
 .number {
-    color:#e67e22;
-    font-size:150%;
+    color: #e67e22;
+    font-size: 150%;
     height: 54px;
     width: 54px;
     border: 2px solid #e67e22;
@@ -285,7 +336,7 @@ h3 {
     display: inline-block;
     text-align: center;
     margin-right: 25px;
-    float:left;
+    float: left;
     padding: 5px;
 }
 
@@ -293,13 +344,13 @@ h3 {
     margin-bottom: 50px;
 }
 
-.work-step:last-of-type{
+.work-step:last-of-type {
     margin-bottom: 80px;
 }
 
 .btn-app img {
-  height:  50px;
-  width: auto;
+    height: 50px;
+    width: auto;
 }
 
 /*****************************************/
@@ -310,22 +361,24 @@ h3 {
     width: 100%;
     height: auto;
     margin-bottom: 15px;
-    
+
 }
 
-.cities-section h3{
+.cities-section h3 {
     margin-bottom: 15px;
 }
-.cities-section i{
-    float:left;
-    color:#e67e22;
+
+.cities-section i {
+    float: left;
+    color: #e67e22;
     margin-right: 10px;
     width: 30px;
     text-align: center;
     font-size: 120%;
     line-height: 120%;
-    
-} 
+
+}
+
 .city-feature {
     margin-bottom: 5px;
 }
@@ -338,41 +391,43 @@ h3 {
 /**********customer testimonials ***********/
 /*****************************************/
 .testimonials-section {
-    background-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.71)), to(rgba(0, 0, 0, 0.71))), url(img/back-customers.jpg);
-    background-image:linear-gradient(rgba(0, 0, 0, 0.71), rgba(0, 0, 0, 0.71)), url(img/back-customers.jpg);
-    color:#fff;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-size:cover;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.71)), to(rgba(0, 0, 0, 0.71))), url(img/back-customers.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.71), rgba(0, 0, 0, 0.71)), url(img/back-customers.jpg);
+    color: #fff;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-attachment: fixed;
 }
 
-blockquote{
-margin-bottom: 25px;
-font-style:italic;
-   
+blockquote {
+    margin-bottom: 25px;
+    font-style: italic;
+
 }
+
 .customer-profile {
     height: 45px;
     border-radius: 50%;
     margin-right: 10px;
-    vertical-align:middle;
+    vertical-align: middle;
 }
 
-blockquote{
+blockquote {
     position: relative;
     padding: 2%;
     line-height: 145%;
     margin-top: 40px;
-   
+
 }
-blockquote:before { 
-    content:"\0022"; 
+
+blockquote:before {
+    content: "\0022";
     font-size: 500%;
     display: block;
     position: absolute;
     top: -5px;
-   left:-5px;
+    left: -5px;
 }
 
 /*****************************************/
@@ -381,6 +436,7 @@ blockquote:before {
 .plans-section {
     background-color: #f4f4f4;
 }
+
 .plans-section h3 {
     border-bottom: 15px;
     font-size: 110%;
@@ -393,44 +449,48 @@ blockquote:before {
     margin-left: 5%;
     width: 90%;
     border-radius: 5px;
-    
-    
+
+
 }
 
-.small-plan-box{
+.small-plan-box {
     border-bottom: 1px solid #e8e8e8;
     padding: 15px;
-} 
-.small-plan-box li {
-    padding: 5px 0;
-    
-    
 }
 
-.small-plan-box:last-of-type{
+.small-plan-box li {
+    padding: 5px 0;
+
+
+}
+
+.small-plan-box:last-of-type {
     text-align: center;
 }
+
 .price {
-    color:#e67e22;
+    color: #e67e22;
     font-size: 300%;
     font-weight: 100;
     margin-bottom: 10px;
-    
+
 }
 
 .price span {
     font-size: 30%;
     font-weight: 300;
 }
+
 .price-per-meal {
-    font-size: 80%;   
+    font-size: 80%;
 }
 
 .big-plan-box ul {
-    list-style:none;
+    list-style: none;
 }
-.big-plan-box i{
-    color:#e67e22;
+
+.big-plan-box i {
+    color: #e67e22;
     margin-right: 10px;
     font-size: 120%;
     line-height: 120%;
@@ -441,9 +501,9 @@ blockquote:before {
     margin-top: -5px;
 }
 
-.big-plan-box .full-btn{
-    
-   margin: 0;
+.big-plan-box .full-btn {
+
+    margin: 0;
 }
 
 /*****************************************/
@@ -454,102 +514,111 @@ blockquote:before {
     margin: 0 auto;
 }
 
-.contact-form input[type=text],input[type=email],select,textarea{
+.contact-form input[type=text],
+input[type=email],
+select,
+textarea {
     width: 100%;
     padding: 7px;
     border-radius: 3px;
     border: 1px solid #ccc;
 }
 
-.contact-form input[type=checkbox]{
+.contact-form input[type=checkbox] {
     width: 30px;
 }
 
-.contact-form textarea{
+.contact-form textarea {
     height: 100px;
 }
+
 /*****************************************/
 /**********form section***********/
 /*****************************************/
-footer{
+footer {
     background: #333;
     padding: 50px;
     font-size: 80%;
 }
 
-footer li{
+footer li {
     display: inline-block;
-     margin-right: 20px;
+    margin-right: 20px;
     list-style: none;
-    
-   
+
+
 }
 
-.mini-nav{
+.mini-nav {
     float: left;
- 
+
 }
 
-.social-links{
+.social-links {
     float: right;
     font-size: 160%;
 }
 
-.social-links  a:link,
+.social-links a:link,
 .mini-nav li a:link,
 .social-links a:visited,
-.mini-nav li a:visited{
+.mini-nav li a:visited {
     color: #888;
     -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
 .mini-nav li a:hover,
-.mini-nav li a:active{
-    color:#fff;
+.mini-nav li a:active {
+    color: #fff;
 }
 
 
-.ion-social-facebook,.ion-social-twitter,.ion-social-googleplus,.ion-social-instagram{
-    -webkit-transition:color 0.2s;
-    transition:color 0.2s;
-    
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    -webkit-transition: color 0.2s;
+    transition: color 0.2s;
+
 }
+
 .ion-social-facebook a:hover,
-.ion-social-facebook:active{
-    color:#4267b2;
+.ion-social-facebook:active {
+    color: #4267b2;
 }
 
 .ion-social-twitter:hover,
-.ion-social-twitter:active{
-    color:#1da1f2;
+.ion-social-twitter:active {
+    color: #1da1f2;
 }
 
 .ion-social-googleplus:hover,
-.ion-social-googleplus:active{
-    color:#d34836;
+.ion-social-googleplus:active {
+    color: #d34836;
 }
+
 .ion-social-instagram:hover,
-.ion-social-instagram:active{
+.ion-social-instagram:active {
     color: #8a3ab9;
 }
 
-.social-media li a{
+.social-media li a {
     font-size: 160%;
-} 
-
-.social-media li:last-child,
-.mini-nav li:last-child{
-    margin-right: 0;    
 }
 
-.copyright-text{
+.social-media li:last-child,
+.mini-nav li:last-child {
+    margin-right: 0;
+}
+
+.copyright-text {
     text-align: center;
     color: #888;
     margin-top: 20px;
 }
 
 footer a:link,
-footer a:visited{
+footer a:visited {
     border-bottom: none;
 }
